Moved buttons.  Solved overlap problem by floating the entire save div.

--- a/notepad/css/notepad.css
+++ b/notepad/css/notepad.css
@@ -37,13 +37,17 @@ ul {
     padding-left: 30px;
 }
 
-#save .save {
-    float: right;
-    margin-top: 60px;
-    padding: 8px;
-    font-size: large;
+#save {
+    float: left;
+    width: 100%;
+    margin-top: 40px;
+}
+#save button {
+    font-size: 90%;
     background: #ffe;
-    border-radius: 8px;
+    border-radius: 5px;    
+    padding: 8px;
+    float: right;
 }
 
 /*
@@ -306,6 +310,10 @@ ul {
  * DEBUG
  */
 
+#triples {
+    clear: both;
+}
+
 .debug {
     display: none;  /* turns this off */
     position: absolute; bottom: 0px;
@@ -321,6 +329,7 @@ ul {
 }
 
 .turtle {
+    clear: both;
     font-family: courier;
     font-size: small;
     white-space: pre;
